# journalling-assistant

./: config.py  pyproject.toml
Books/Long Discourses/: long_discourse.md
db/: __init__.py  crud.py  database.py  schema.py
experiments/: opnellm.ipynb  run_ollama.py
ingestion/: __init__.py  chunking.py  embed.py  orchestrator.py  parsing.py
