[project]
name = "journalling-assitant"
version = "0.1.0"
description = ""
authors = [
    {name = "Himanshu2398",email = "himanshubhardwaj2398@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ollama (>=0.5.3,<0.6.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "sqlite-vec (>=0.1.6,<0.2.0)",
    "openai (>=1.106.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pageindex (>=0.1.8,<0.2.0)",
    "llama-cloud-services (>=0.6.64,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "langchain-postgres (>=0.0.15,<0.0.16)",
    "markdownify (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "semantic-chunker (>=0.2.0,<0.3.0)",
    "semantic-router (>=0.1.11,<0.2.0)",
    "semantic-chunkers (>=0.1.1,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

